@@ -10,6 +10,7 @@
 
 
 Version 4.1.5
+ - Fixed: Temp Fix for Lightbox giving errors when Googlemaps not installed (windmillway)
  - Fixed: [ 1944250 ] placelist.php Level Issue On Language Change For Some Themes (canajun2eh)
  - Added: Add "Painting" and "Other" to supported sortable media types on Lightbox-Album page(windmillway)
  - Fixed [ 1941544 ] Yahrzeiten Block in IE7 gives an Error (opus27)
